Fixed: `media-content` overflow

--- a/docs/css/elenore-docs.css
+++ b/docs/css/elenore-docs.css
@@ -6230,7 +6230,6 @@ a.dropdown-item.is-active {
           flex-grow: 1;
   -ms-flex-negative: 1;
       flex-shrink: 1;
-  overflow: auto;
   text-align: left;
 }
 
